# rendering-engine

./: .gitignore  CMakeLists.txt  README.md  main.py
include/: canvas.hpp  renderer.hpp  scene.hpp
include/brdfs/: lambertian.hpp  phong.hpp
include/lights/: point_light.hpp  scene_light.hpp
include/linalg/: linalg.hpp  vec.hpp
include/objects/: plane.hpp  scene_object.hpp  sphere.hpp
include/tools/: colour.hpp
prototype/: ray_notebook.ipynb
prototype/src/: main.py
prototype/src/objects/: sphere.py
prototype/src/tools/: intersections.py  vector_tools.py
src/: CMakeLists.txt  canvas.cpp  main.cpp  renderer.cpp  scene.cpp
src/brdfs/: CMakeLists.txt  lambertian.cpp  phong.cpp
src/lights/: CMakeLists.txt  point_light.cpp  scene_light.cpp
src/linalg/: CMakeLists.txt  linalg.cpp  vec.cpp
src/objects/: CMakeLists.txt  plane.cpp  scene_object.cpp  sphere.cpp
src/tools/: CMakeLists.txt  colour.cpp
